samples/_failures_safe/1761346203_a3a36a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb6f42a1.c: In function ‘main’:
./samples/SAFE/__tmp_fb6f42a1.c:148:5: error: expected ‘,’ or ‘;’ at end of input
  148 |     int cols2 = read_int
      |     ^~~
./samples/SAFE/__tmp_fb6f42a1.c:148:5: error: expected declaration or statement at end of input
